Modern IDB: LayoutTest imported/w3c/indexeddb/keyorder-private.html is flaky. https://bugs.webkit.org/show_bug.cgi?id=153438.

Reviewed by Alex Christensen.

Source/WebCore:

Tests: storage/indexeddb/modern/idbkey-array-equality-private.html
       storage/indexeddb/modern/idbkey-array-equality.html

* Modules/indexeddb/IDBKeyData.cpp:
(WebCore::IDBKeyData::loggingString):
(WebCore::IDBKeyData::operator==): Fix obvious bug.

LayoutTests:

* platform/mac-wk1/TestExpectations: Re-enable the flaky test.
* resources/js-test.js:
* storage/indexeddb/modern/idbkey-array-equality-expected.txt: Added.
* storage/indexeddb/modern/idbkey-array-equality-private-expected.txt: Added.
* storage/indexeddb/modern/idbkey-array-equality-private.html: Added.
* storage/indexeddb/modern/idbkey-array-equality.html: Added.
* storage/indexeddb/modern/resources/idbkey-array-equality.js: Added.


Canonical link: https://commits.webkit.org/171979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196137 268f45cc-cd09-0410-ab3c-d52691b4dbfc